Download only the bytes that a parser reads